# llm_summary

./: .gitignore  README.md  app.py  main.py  pyproject.toml
llm_summary/: __init__.py  core.py
my_project/: README.md  app.py  pyproject.toml
my_project/llm_summary/: core.py
